[www.hlidacshopu.cz] Prefetch shops

--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -3,6 +3,10 @@
 
 {% block title %}Přehled dat Hlídače shopů{% endblock %}
 
+{% block preload %}
+<link rel="preload" href="https://api.hlidacshopu.cz/shop-numbers" as="fetch" crossorigin="anonymous">
+{% endblock %}
+
 {% block styles %}
 <style>
   .shops-stats {
