[www.hlidacshopu.cz] Added Edge Beta icon

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -135,12 +135,11 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 browser-list">
         <div class="browser-support">
-          <div class="browser-support__icon">
-            <a
-              href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">
+          <a href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">
+            <div class="browser-support__icon">
               <img loading="lazy" src="/assets/img/chrome.svg" alt="Ikona prohlížeče Google Chrome">
-            </a>
-          </div>
+            </div>
+          </a>
           <p class="sub-info--grey">Podporujeme <br>prohlížeč Google&nbsp;Chrome</p>
         </div>
         <div class="browser-support">
@@ -149,23 +148,26 @@
           <p class="sub-info--grey">Brzy podpora pro <br>prohlížeč Firefox</p>
         </div>
         <div class="browser-support">
-          <div class="browser-support__icon">
-            <a
-              href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">
+          <a href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">
+            <div class="browser-support__icon">
               <img loading="lazy" src="/assets/img/brave.svg" alt="Ikona prohlížeče Brave">
-            </a>
-          </div>
+            </div>
+          </a>
           <p class="sub-info--grey">Podporujeme <br>prohlížeč Brave</p>
         </div>
         <div class="browser-support">
-          <div class="browser-support__icon">
-            <a
-              href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">
-              <img loading="lazy" src="https://pbs.twimg.com/profile_images/1191435169804062721/ToPeBEVd_400x400.png"
-                   alt="Ikona prohlížeče Microsoft Edge Beta">
-            </a>
-          </div>
+          <a href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">
+            <div class="browser-support__icon">
+              <img loading="lazy" src="/assets/img/edge-beta.svg" alt="Ikona prohlížeče Microsoft Edge Beta">
+            </div>
+          </a>
           <p class="sub-info--grey">Podporujeme <br>prohlížeč Microsoft&nbsp;Edge Beta</p>
+        </div>
+        <div class="browser-support">
+          <div class="browser-support__icon browser-support__icon--disabled">
+              <img loading="lazy" src="/assets/img/edge.svg" alt="Ikona prohlížeče Microsoft Edge">
+          </div>
+          <p class="sub-info--grey">Brzy podpora pro  <br>prohlížeč Microsoft&nbsp;Edge</p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
