[www.hlidacshopu.cz] Added support for Firefox

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -143,9 +143,12 @@
           <p class="sub-info--grey">Podporujeme <br>prohlížeč Google&nbsp;Chrome</p>
         </div>
         <div class="browser-support">
-          <div class="browser-support__icon browser-support__icon--disabled">
-            <img loading="lazy" src="/assets/img/firefox.svg" alt="Ikona prohlížeče Firefox"></div>
-          <p class="sub-info--grey">Brzy podpora pro <br>prohlížeč Firefox</p>
+          <a href="https://addons.mozilla.org/en-US/firefox/addon/hl%C3%ADda%C4%8D-shop%C5%AF/">
+            <div class="browser-support__icon">
+              <img loading="lazy" src="/assets/img/firefox.svg" alt="Ikona prohlížeče Firefox">
+            </div>
+          </a>
+          <p class="sub-info--grey">Podporujeme <br>prohlížeč Firefox</p>
         </div>
         <div class="browser-support">
           <a href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">
