[www.hlidacshopu.cz] Updated numbers

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -279,7 +279,7 @@
       </div>
       <dl class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
         <dt class="text--grey">Nainstalovaných rozšíření</dt>
-        <dd class="number">3 600+</dd>
+        <dd class="number">3 900+</dd>
       </dl>
       <dl class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
         <dt class="text--grey">Počet e-shopů</dt>
@@ -287,7 +287,7 @@
       </dl>
       <dl class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
         <dt class="text--grey">Počet produktů</dt>
-        <dd id="products-count" class="number">1 000 000</dd>
+        <dd id="products-count" class="number">1 000 000+</dd>
       </dl>
     </div>
   </div>
