[www.hlidacshopu.cz] Typo

--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -63,7 +63,6 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Přehled našich dat</h2>
-
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <table class="shops-stats">
@@ -71,13 +70,13 @@
               <col width="150">
             </colgroup>
             <thead>
-            <tr>
-              <th scope="col">E-shop</th>
-              <th scope="col">Produktů celkem</th>
-              <th scope="col">Produktů v Black Friday</th>
-              <th scope="col">Průměrná uváděná sleva</th>
-              <th scope="col">Průměrná reálná sleva</th>
-            </tr>
+              <tr>
+                <th scope="col">E-shop</th>
+                <th scope="col">Produktů celkem</th>
+                <th scope="col">Produktů v Black Friday</th>
+                <th scope="col">Průměrná uváděná sleva</th>
+                <th scope="col">Průměrná reálná sleva</th>
+              </tr>
             </thead>
             <tbody id="table-root">
               <tr>
@@ -91,7 +90,7 @@
           </table>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <p class="explanation">Poznámka: <em>Reálná sleva</em> se počítá jako aktuální cena po slevě ku maxímální ceně, za kterou se zboží prodávalo za posledních 90 dní.</p>
+          <p class="explanation">Poznámka: <em>Reálná sleva</em> se počítá jako aktuální cena po slevě ku maximální ceně, za kterou se zboží prodávalo za posledních 90 dní.</p>
         </div>
       </div>
     </div>
