[www.hlidacshopu.cz] Added soon to be supported Opera browser to the list

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -169,6 +169,12 @@
         </div>
         <div class="browser-support">
           <div class="browser-support__icon browser-support__icon--disabled">
+            <img loading="lazy" src="/assets/img/opera.svg" alt="Ikona prohlížeče Opera">
+          </div>
+          <p class="sub-info--grey">Brzy podpora pro <br>prohlížeč Opera</p>
+        </div>
+        <div class="browser-support">
+          <div class="browser-support__icon browser-support__icon--disabled">
               <img loading="lazy" src="/assets/img/edge.svg" alt="Ikona prohlížeče Microsoft Edge">
           </div>
           <p class="sub-info--grey">Brzy podpora pro  <br>prohlížeč Microsoft&nbsp;Edge</p>
