--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -4,7 +4,9 @@
 {% block title %}Hlídač shopů{% endblock %}
 
 {% block preload %}
-<link rel="preconnect" href="https://connect.facebook.net">
+<link rel="preconnect" href="https://www.facebook.com">
+<link rel="preconnect" href="https://staticxx.facebook.com">
+<link rel="prefetch" href="https://connect.facebook.net/cs_CZ/sdk.js" as="script" crossorigin="anonymous">
 <link rel="prefetch" href="https://cdn.jsdelivr.net/npm/chart.js@2.9.1/dist/Chart.bundle.min.js" as="script" crossorigin="anonymous">
 <link rel="modulepreload" href="https://unpkg.com/lit-html@1.1.1/lit-html.js?module" crossorigin="anonymous">
 <link rel="preload" href="https://api.hlidacshopu.cz/shop-numbers" as="fetch" crossorigin="anonymous">
