--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -364,8 +364,8 @@
       <div id="fb-root"></div>
       <script async defer crossorigin="anonymous" src="https://connect.facebook.net/cs_CZ/sdk.js#xfbml=1&version=v5.0"></script>
       <div class="fb-post" data-href="https://www.facebook.com/hlidacshopu/posts/149676873091906" data-width="" data-show-text="true">
-        <blockquote cite="https://developers.facebook.com/hlidacshopu/posts/149676873091906" class="fb-xfbml-parse-ignore">
-          <a href="https://developers.facebook.com/hlidacshopu/posts/149676873091906">Najdete na naší Facebookové stránce Hlídač Shopů</a>
+        <blockquote cite="https://www.facebook.com/hlidacshopu/posts/149676873091906" class="fb-xfbml-parse-ignore">
+          <a href="https://www.facebook.com/hlidacshopu/posts/149676873091906">Najdete na naší Facebookové stránce Hlídač Shopů</a>
         </blockquote>
       </div>
     </div>
