[www.hlidacshopu.cz] Wording on Dashboard

--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/master.html' %}
 {% from 'macros/helpers.html' import sprite %}
 
-{% block title %}Přehled dat Hlídače shopů{% endblock %}
+{% block title %}Přehled Black Friday na Hlídači shopů{% endblock %}
 
 {% block preload %}
 <link rel="preload" href="https://api.hlidacshopu.cz/shop-numbers" as="fetch" crossorigin="anonymous">
@@ -62,7 +62,7 @@
     <div class="layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Přehled našich dat</h2>
+          <h2>Black Friday v číslech</h2>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <table class="shops-stats">
