[www.hlidacshopu.cz] Remove autofocus attrinute

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -37,7 +37,7 @@
                   fill="#CFD4DE"/>
               </svg>
             </i>
-            <input required type="url" name="url" autofocus
+            <input required type="url" name="url"
                    placeholder="Zadejte odkaz produktu&hellip;"
                    title="Zadejte adresu stránky s detailem produktu.">
           </label>
