[www.hlidacshopu.cz] Fixed responsive images on About us page

--- a/www.hlidacshopu.cz/src/html/proc-to-delame/index.html
+++ b/www.hlidacshopu.cz/src/html/proc-to-delame/index.html
@@ -45,12 +45,11 @@
             „původní cenu“ (ta přeškrtnutá, ze které se vypočítává sleva).
             Tato praktika není ojedinělá, viz text&nbsp;níže.</p>
 
-          <img alt="Znázorňující Graf 1"
+          <img alt="Znázorňující Graf 1" class="responsive"
                src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572515748/www.hlidacshopu.cz/graf-01.png"
                srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572515748/www.hlidacshopu.cz/graf-01.png 1x,
                      https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572515748/www.hlidacshopu.cz/graf-01.png 1.5x,
-                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572515748/www.hlidacshopu.cz/graf-01.png 2x"
-               width="100%" height="450">
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572515748/www.hlidacshopu.cz/graf-01.png 2x">
 
           <h2>Proč si myslíme, že se jedná o&nbsp;klamání spotřebitele?</h2>
           <hr>
@@ -131,22 +130,20 @@
             měsícem stála pouze o&nbsp;stovku víc, přesněji 2,749&nbsp;Kč a zlevněná byla
             z&nbsp;2,799&nbsp;Kč. Kouzlo je v&nbsp;tom, že Mall.cz 19.11. (začátek Black Friday
             akce) najednou navýšil původní cenu z&nbsp;2,799&nbsp;Kč na 4,899&nbsp;Kč.</p>
-          <img alt="Znázorňující Graf 2"
+          <img alt="Znázorňující Graf 2" class="responsive"
                src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572515749/www.hlidacshopu.cz/graf-02.png"
                srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572515749/www.hlidacshopu.cz/graf-02.png 1x,
                      https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572515749/www.hlidacshopu.cz/graf-02.png 1.5x,
-                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572515749/www.hlidacshopu.cz/graf-02.png 2x"
-               width="100%">
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572515749/www.hlidacshopu.cz/graf-02.png 2x">
           <p>U&nbsp;Alza.cz jsme našli obdobný případ. Koloběžka Urbanstar Uscooter byla
             sice zlevněna na 6,290&nbsp;Kč, nicméně původní cena navýšená 17.11.&nbsp;ze
             7,500&nbsp;Kč na 9,999&nbsp;Kč. Tedy místo reálných 16&nbsp;% byla zázrakem vykouzlena
             sleva 37&nbsp;%.</p>
-          <img alt="Znázorňující Graf 3"
+          <img alt="Znázorňující Graf 3" class="responsive"
                src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572515747/www.hlidacshopu.cz/graf-03.png"
                srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572515747/www.hlidacshopu.cz/graf-03.png 1x,
                      https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572515747/www.hlidacshopu.cz/graf-03.png 1.5x,
-                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572515747/www.hlidacshopu.cz/graf-03.png 2x"
-               width="100%">
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572515747/www.hlidacshopu.cz/graf-03.png 2x">
           <p>Na CZC.cz jsme dokonce našli produkty inzerované v&nbsp;Black Friday sekci,
             u&nbsp;kterých se navýšila nejenom původní cena, ale dokonce i&nbsp;cena samotná,
             ta po slevě. (viz příklad na začátku této stránky).<br>
@@ -170,12 +167,11 @@
             se chceme dostat k&nbsp;více uživatelům. A&nbsp;současně zastřešit tento náš
             společný projekt, na kterém aktuálně spolupracuje Apify, TopMonks a
             Keboola.</p>
-          <img alt="Hlídač Shopů - Ukázka"
+          <img alt="Hlídač Shopů - Ukázka" class="responsive"
                src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png"
                srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1x,
                      https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1.5x,
-                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 2x"
-               width="100%">
+                     https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 2x">
         </div>
       </div>
     </div>
