[www.hlidacshopu.cz] Revert FB posts from HP

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -361,13 +361,23 @@
   <div class="mdc-layout-grid__inner layout-wrapper">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>Nejzajímavější slevy</h2>
-      <div id="fb-root"></div>
-      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/cs_CZ/sdk.js#xfbml=1&version=v5.0"></script>
-      <div class="fb-post" data-href="https://www.facebook.com/hlidacshopu/posts/149676873091906" data-width="" data-show-text="true">
-        <blockquote cite="https://www.facebook.com/hlidacshopu/posts/149676873091906" class="fb-xfbml-parse-ignore">
-          <a href="https://www.facebook.com/hlidacshopu/posts/149676873091906">Najdete na naší Facebookové stránce Hlídač Shopů</a>
-        </blockquote>
-      </div>
+      <picture>
+        <source media="screen and (max-width: 479px)"
+                srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_420/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 1x,
+                        https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_420/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 1.5x,
+                        https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_420/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 2x">
+        <source media="screen and (min-width: 480px) and (max-width: 839px)"
+                srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_800/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 1x,
+                        https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_800/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 1.5x,
+                        https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_800/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 2x">
+        <source media="screen and (min-width: 840px)"
+                srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 1x,
+                        https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 1.5x,
+                        https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/mall-black-friday.png 2x">
+        <img loading="lazy" class="responsive"
+             alt="Obrázek nejzajímavějších slev"
+             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572499143/www.hlidacshopu.cz/mall-black-friday.png">
+      </picture>
     </div>
   </div>
 </section>
