--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -567,9 +567,10 @@
   const installationGuide = document.getElementById("extension-install-guide");
   const chart = () => document.getElementById("hlidac-shopu-chart");
   const apiUrl = detailUri => `https://api.hlidacshopu.cz/shop?url=${encodeURIComponent(detailUri)}&metadata=1`;
-  const meta = ({ itemImage, itemName, ...rest }) => ({
+  const meta = ({ itemImage, itemName, real_sale, ...rest }) => ({
     name: itemName,
     imageUrl: itemImage === "null" ? null : itemImage,
+    realDiscount: real_sale === "null" ? null : parseFloat(real_sale),
     ...rest
   });
   const shopStats = ({ key, count_all, count_bf, declared_sale, real_sale, percent_bf }) => ({
