--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -304,6 +304,7 @@
   </div>
 </section>
 
+<link rel="stylesheet" href="/assets/css/reviews.css">
 <section class="references">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
@@ -348,9 +349,9 @@
             kdyby to hlídalo více e-shopů, klidně napsat API tak, aby mohli lidé pomáhat.</p>
         </div>
       </div>
-      <!--div class="references_link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="/recenze/">Další hodnocení nalezente zde</a>
-      </div-->
+      <div class="references_link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <a href="/recenze/">Další hodnocení</a>
+      </div>
     </div>
   </div>
 </section>
@@ -637,7 +638,7 @@
     }
   });
 
-  addEventListener("load", async e => {
+  addEventListener("load", e => {
     const searchParams = new URLSearchParams(location.search);
     if (searchParams.has("url")) {
       const detailUri = searchParams.get("url");
@@ -825,7 +826,6 @@
       </ul>
     `;
   }
-
 
   function firefoxInstalationGuide() {
     return html`
