--- a/www.hlidacshopu.cz/src/html/recenze/index.html
+++ b/www.hlidacshopu.cz/src/html/recenze/index.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block main %}
-<section class="mdc-layout-grid">
+<section class="mdc-layout-grid layout-wrapper">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>Recenze na rozšíření Hlídač shopů</h2>
