Smazaní linku na XIXOIO

--- a/www.topmonks.com/src/html/case-studies/xixoio/index.html
+++ b/www.topmonks.com/src/html/case-studies/xixoio/index.html
@@ -129,8 +129,7 @@
         <hr class="purple">
         <p>Their main goal is to develop a fully compliant end-to-end solution for
           tokenization of companies and security token investments. It aims to integrate
-          all services will be the <a
-            href="https://www.ipco.io/">IPCO&nbsp;&ndash; Initial Public Coin Offering platform https://www.ipco.io/</a>.
+          all services will be the IPCO&nbsp;&ndash; Initial Public Coin Offering platform www.ipco.io</a>.
         </p>
 
         <p>The IPCO platform is solving all the legal, regulatory and compliance issues,
