[www.hlidacshopu.cz] Disable gap filling on "declared original price"

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -474,7 +474,7 @@
             fill: "origin",
             backgroundColor: "#ffffff00",
             pointRadius: 0,
-            spanGaps: true,
+            spanGaps: false,
             data: prices.originalPrice
           },
           {
