[www.hlidacshopu.cz] Moved company logos to sprite

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -78,17 +78,17 @@
           <ul>
             <li>
               <a href="https://apify.com/">
-                <img src="/assets/img/logos/apify_logo.svg" alt="Apify" height="40">
+                {{sprite("apify_logo", "Apify", "0 0 157 42")}}
               </a>
             </li>
             <li>
               <a href="https://www.keboola.com/">
-                <img src="/assets/img/logos/keboola_logo.svg" alt="Keboola" height="40">
+                {{sprite("keboola_logo", "Keboola", "0 0 161 41")}}
               </a>
             </li>
             <li>
               <a href="https://www.topmonks.cz/">
-                <img src="/assets/img/logos/topmonks_logo.svg" alt="TopMonks" height="40">
+                {{sprite("topmonks_logo", "TopMonks", "0 0 632 144")}}
               </a>
             </li>
           </ul>
