[www.hlidacshopu.cz] Start scripts on DOMContentLoaded

--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -139,7 +139,7 @@
     }]
   ]);
 
-  addEventListener("load", async e => {
+  addEventListener("DOMContentLoaded", async e => {
     try {
       const resp = await Promise.race([timeout(4000), fetch("https://api.hlidacshopu.cz/shop-numbers")]);
       if (!resp.ok) throw new Error("API error");
