[www.hlidacshopu.cz] Force browser selection with URL parameter

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -652,7 +652,7 @@
       renderResultsModal(detailUri);
     }
     render(eShopList(Array.from(shops.values())), eShops);
-    if (navigator.userAgent.toLowerCase().indexOf("firefox") > 0) {
+    if (searchParams.has("firefox") || navigator.userAgent.toLowerCase().indexOf("firefox") > 0) {
       render(firefoxInstalationGuide(), installationGuide);
     }
     eShopsCount.innerText = shops.size.toLocaleString("cs");
