--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -64,7 +64,7 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Black Friday v číslech</h2>
-          <p>Omlouváme se. Aktuálně není naše statistika úplně v pořádku a data mohou být zavádějící. Pracujume na nápravě.</p>
+          <p>Omlouváme se. Aktuálně není naše statistika úplně v pořádku a data mohou být zavádějící. Pracujeme na nápravě.</p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <table class="shops-stats">
