--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -93,6 +93,11 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <p class="explanation">Poznámka: <em>Reálná sleva</em> se počítá jako aktuální cena po slevě ku maximální ceně, za kterou se zboží prodávalo za posledních 90 dní.</p>
         </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Otevřená data <small>beta</small></h2>
+          <p>Otevíráme naše data pro vaše analýzy. Najdete je postupně přibývat v
+            <a href="https://console.cloud.google.com/bigquery?p=hlidacshopu&d=hlidacshopu&t=allshops&page=table">Google BigQuery</a></p>
+        </div>
       </div>
     </div>
   </div>
