[www.hlidacshopu.cz] Show planned support for Safari

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -177,9 +177,9 @@
         </div>
         <div class="browser-support">
           <div class="browser-support__icon browser-support__icon--disabled">
-            <img loading="lazy" src="/assets/img/edge.svg" alt="Ikona prohlížeče Microsoft Edge">
+            <img loading="lazy" src="/assets/img/safari.svg" alt="Ikona prohlížeče Safari">
           </div>
-          <p class="sub-info--grey">Brzy podpora pro <br>prohlížeč Microsoft&nbsp;Edge</p>
+          <p class="sub-info--grey">Brzy podpora pro <br>prohlížeč Safari</p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
