[www.hlidacshopu.cz] Added label for URL input

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -22,12 +22,14 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <form id="compare-form" action="/">
           <div>
-            <h1><label for="url">Ujistěte se, že nakupujete opravdu se slevou</label></h1>
+            <h1>Ujistěte se, že nakupujete opravdu se slevou</h1>
 
             <p>Není sleva jako sleva. Někdy obchody těsně před vlnou slev uměle
               navyšují původní ceny, aby konečná sleva působila výhodně. Hlídač
               Shopů vám zobrazí původní cenu produktu a její vývoj v&nbsp;čase, takže
               díky němu snadno poznáte, jestli nakupujete se slevou nebo&nbsp;ne.</p>
+
+            <p><label for="url">Zadejte adresu stránky s detailem produktu:</label></p>
 
             <div class="form-combo">
               <div class="url-input">
