--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -172,9 +172,10 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
         <h3>Instalace Hlídače Shopů do prohlížeče</h3>
-        <p>Aktuálně si můžete Hlídače Shopů nainstalovat do Chromu, Firefoxu, Brave a Edge Beta.
-          Pokud pokud ani jeden z nich nepoužíváte, vydržte. Usilovně makáme na
-          verzích rozšíření Hlídače Shopů i&nbsp;pro další prohlížeče.</p>
+        <p>Aktuálně si můžete Hlídače Shopů nainstalovat do desktopového Chromu,
+          Firefoxu, Brave a Edge Beta. Pokud ani jeden z nich nepoužíváte,
+          vydržte. Usilovně makáme na verzích rozšíření Hlídače Shopů
+          i&nbsp;pro další prohlížeče.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
         <h3>Proč byste si měli rozšíření Hlídače Shopů instalovat a jak to vlastně vypadá?</h3>
