[www.hlidacshopu.cz] Added links

--- a/www.hlidacshopu.cz/src/html/proc-to-delame/index.html
+++ b/www.hlidacshopu.cz/src/html/proc-to-delame/index.html
@@ -155,7 +155,9 @@
           </p>
           <p>Eshopy jsme monitorovali dále a v&nbsp;roce 2018&nbsp;jsme vzali data na <a
               href="https://www.datafestak.cz/">Data
-              fesťák</a>, v&nbsp;rámci kterého se vytvořil tým z&nbsp;Apify, TopMonks, Kebooly a Bizztreatu.
+              fesťák</a>, v&nbsp;rámci kterého se vytvořil tým z&nbsp;
+            <a href="https://www.apify.com/">Apify</a>, <a href="https://www.topmonks.cz/">TopMonks</a>,
+            <a href="https://www.keboola.com/">Kebooly</a> a <a href="https://www.biztreat.com">Bizztreatu</a>.
             V&nbsp;tomto týmu jsme vytvořili <a
               href="https://www.lupa.cz/clanky/black-friday-po-cesku-kouzla-se-slevami-po-roce/">analýzu Black Friday po
               roce</a>
@@ -165,8 +167,9 @@
             uživatelů.</p>
           <p>Rok se s&nbsp;rokem sešel a jsme tu znovu, tentokrát s&nbsp;tímto webem, kterým
             se chceme dostat k&nbsp;více uživatelům. A&nbsp;současně zastřešit tento náš
-            společný projekt, na kterém aktuálně spolupracuje Apify, TopMonks a
-            Keboola.</p>
+            společný projekt, na kterém aktuálně spolupracuje
+            <a href="https://www.apify.com/">Apify</a>, <a href="https://www.topmonks.cz/">TopMonks</a> a
+            <a href="https://www.keboola.com/">Keboola</a>.</p>
           <img alt="Hlídač Shopů - Ukázka" class="responsive"
                src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572499143/www.hlidacshopu.cz/porovnani-cen.png"
                srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572499143/www.hlidacshopu.cz/porovnani-cen.png 1x,
