--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -452,7 +452,7 @@
     const ctx = canvas.getContext("2d");
 
     const count = prices.currentPrice.length;
-    const stepSize = Math.floor(count / 12);
+    const stepSize = Math.floor(count / 12) || 1;
 
     return new Chart(ctx, {
       type: "line",
