--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -140,6 +140,14 @@
           <p class="sub-info--grey">Podporujeme <br>prohlížeč Firefox</p>
         </div>
         <div class="browser-support">
+          <a data-browser="safari" href="https://apps.apple.com/us/app/hl%C3%ADda%C4%8D-shop%C5%AF/id1488295734">
+            <div class="browser-support__icon browser-support__icon--disabled">
+              <img loading="lazy" src="/assets/img/safari.svg" alt="Ikona prohlížeče Safari">
+            </div>
+          </a>
+          <p class="sub-info--grey">Podporujeme <br>prohlížeč Safari</p>
+        </div>
+        <div class="browser-support">
           <a data-browser="brave"
             href="https://chrome.google.com/webstore/detail/hl%C3%ADda%C4%8D-shop%C5%AF/plmlonggbfebcjelncogcnclagkmkikk">
             <div class="browser-support__icon">
@@ -162,12 +170,6 @@
             <img loading="lazy" src="/assets/img/opera.svg" alt="Ikona prohlížeče Opera">
           </div>
           <p class="sub-info--grey">Brzy podpora pro <br>prohlížeč Opera</p>
-        </div>
-        <div class="browser-support">
-          <div class="browser-support__icon browser-support__icon--disabled">
-            <img loading="lazy" src="/assets/img/safari.svg" alt="Ikona prohlížeče Safari">
-          </div>
-          <p class="sub-info--grey">Brzy podpora pro <br>prohlížeč Safari</p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
