--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -141,7 +141,7 @@
         </div>
         <div class="browser-support">
           <a data-browser="safari" href="https://apps.apple.com/us/app/hl%C3%ADda%C4%8D-shop%C5%AF/id1488295734">
-            <div class="browser-support__icon browser-support__icon--disabled">
+            <div class="browser-support__icon">
               <img loading="lazy" src="/assets/img/safari.svg" alt="Ikona prohlížeče Safari">
             </div>
           </a>
